# idea-to-product-os

./: .gitignore  .graphifyignore  AGENT.md  CLAUDE.md  CODEX.md  DEBT.md  README.md  bricklayer.yaml  decision-log.md  pyproject.toml
.github/: copilot-instructions.md
agents/: README.md
bricklayer/: .gitignore  BUILDER.md  INTAKE.md  Readme.md  WORKFLOW.md  context.txt  manifest.md  roadmap.md  skeptic-gate.md  spec.md  state-schema.md  state.json
bricklayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: __init__.py  config.py  main.py  registry.py  runner.py  state.py
context/: README.md  decision-log.md  pipeline-status.md
docs/: architecture.md  example-for-getting-started.md  getting-started.md  pipeline.md  session-2026-03-27.md  vision.md  workflow.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infrastructure/: docker-compose.yml  env.example
memory/: feedback_dangerously_skip_permissions.md
system-prompts/: README.md  agent-os.md  arch-brain.md  plan-brain.md  repo-auditor.md  sprint-brain.md  stack-rules.md  venture-os.md
templates/: bricklayer.yaml  env.example
tests/: test_agent_commands.py  test_agent_deploy.py  test_agent_new.py  test_branch.py  test_build.py  test_build_skeptic.py  test_build_tools.py  test_build_verdict.py  test_close_phase_fix.py  test_close_session.py  test_commit.py  test_config.py  test_config_write.py  test_context.py  test_git_fixes.py  test_main.py  test_new_project.py  test_next.py  test_pause.py  test_registry.py  test_resume.py  (+3 more)
(+1558 files in other folders)
